chore(sdk): add comprehensive unit and E2E tests
Signed-off-by: MDzaja <mirkodzaja0@gmail.com>